# kafka-desktop-consumer

./: .gitignore  README.md  config.sample.ini  list_topics.py  main.py  poetry.toml  pyproject.toml  requirements.txt  run.sh
kafka/: __init__.py  avro_serializer.py  consumer.py  exception.py
kafka/avro_schemas/: __init__.py  auto_decode.py  embedded_serializer.py  registry_serializer.py  schema_registry_client.py
lib/: wxautocompletectrl.py
ui/: __init__.py  config.py  dicthelper.py  layout.py  main.py
ui/handlers/: __init__.py  consumer_writer.py  reader.py
